--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@mui/material": "^5.15.17",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
@@ -26,6 +29,7 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
