--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "axios": "^1.6.8",
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
@@ -29,6 +33,7 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
