--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "axios": "^1.6.8",
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
+    "dompurify": "^3.1.6",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
@@ -33,6 +36,9 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/csurf": "^1.11.5",
+    "@types/dompurify": "^3.0.5",
     "@types/draft-js": "^0.11.18",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
